<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_centerVertical="true"
    tools:context=".LoginActivity" >

    <ImageView
        android:id="@+id/iconMeMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher" 
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/slogan"
        android:paddingBottom="10dp"
        />
    
    <TextView
        android:id="@+id/labelUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:text="@string/label_userEmail" 
        android:layout_below="@+id/iconMeMap"
        />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelUserEmail"
        android:hint="@string/input_hint_userMail"
        android:inputType="textEmailAddress"         
        android:maxLength="40" 
        android:focusable="true" />
    
    <TextView
        android:id="@+id/labelPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_password"  
        android:layout_below="@+id/userEmail"
        />
    
    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelPassword"
        android:maxLength="20" 
        android:hint="@string/input_hint_password"
        android:inputType="textPassword" />
   

    <RelativeLayout
        android:id="@+id/LayoutButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        >
        
        <Button
	        android:id="@+id/buttonLogin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/buttonLogin" 
	        android:onClick="openMap" />
	    <Button
	        android:id="@+id/buttonRecoverPass"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/buttonLogin"
	        android:text="@string/buttonRecoverPass" 
	        android:onClick="openNotesList" />
    </RelativeLayout>

    <TextView
        android:id="@+id/labelCopyRigth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/copy_right" />

    <CheckBox
        android:id="@+id/rememberLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_below="@+id/LayoutButtons"
        android:text="@string/checkBoxRemember" />
    
</RelativeLayout>