<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChangePasswordActivity" >
    
    <TextView
        android:id="@+id/labelRecoverUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:text="@string/label_userEmail"/>

    <EditText
        android:id="@+id/RecoverUserEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelRecoverUserEmail"
        android:hint="@string/input_hint_userMail"
        android:inputType="textEmailAddress"         
        android:maxLength="40" 
        android:focusable="true" />
    <TextView
        android:id="@+id/labelNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"   
         android:layout_below="@+id/RecoverUserEmail"     
        android:text="@string/label_newPassword"/>    
    <EditText
        android:id="@+id/newPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelNewPassword"
        android:maxLength="20" 
        android:hint="@string/input_hint_password"
        android:inputType="textPassword" />
    <TextView
        android:id="@+id/labelConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"   
        android:layout_below="@+id/newPassword"     
        android:text="@string/label_confirmPassword"/>
    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelConfirmPassword"
        android:maxLength="20" 
        android:hint="@string/input_hint_password"
        android:inputType="textPassword" />
    <Button
    	android:id="@+id/sendNewPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPassword"
        android:text="@string/label_Guardar" />

</RelativeLayout>
